Change info in template

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -44,3 +44,7 @@
           </ul>
         </div>
       </section>
+<script type="text/javascript">
+  document.getElementById("home-link").parentElement.className+=" active";
+</script>
+<%- include('footer') -%>
