--- a/views/pages/education.ejs
+++ b/views/pages/education.ejs
@@ -5,27 +5,39 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <h3 class="mb-0">University Institute of Engineering and Technology</h3>
+              <div class="subheading mb-3">Bachelors of Engineering</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">2016 - present</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">GMA City Public School</h3>
+              <div class="subheading mb-3">Class XII (CBSE)</div>
+              <p>%age: 87%</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">2016</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
+              <h3 class="mb-0">GMA City Public School</h3>
+              <div class="subheading mb-3">Class X (CBSE)</div>
+              <p>CGPA: 10.00</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">2014</span>
             </div>
           </div>
 
         </div>
       </section>
+<script type="text/javascript">
+	document.getElementById("education-link").parentElement.className+=" active";
+</script>
 <%- include('footer') -%>
