--- a/views/pages/header.ejs
+++ b/views/pages/header.ejs
@@ -31,7 +31,7 @@
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">**</span>
         <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="/img/profile.png" width="150px" alt="">
+          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="/img/profile.png" width="160px" alt="">
         </span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,19 +40,19 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/site/home">Home</a>
+            <a id="home-link" class="nav-link js-scroll-trigger" href="/site/home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/site/experience">Experience</a>
+            <a id="experience-link" class="nav-link js-scroll-trigger" href="/site/experience">Experience</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/site/education">Education</a>
+            <a id="education-link" class="nav-link js-scroll-trigger" href="/site/education">Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/site/skills">Skills</a>
+            <a id="skills-link" class="nav-link js-scroll-trigger" href="/site/skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/site/interests">Interests</a>
+            <a id="interests-link" class="nav-link js-scroll-trigger" href="/site/interests">Interests</a>
           </li>
         </ul>
       </div>
