--- a/views/pages/header.ejs
+++ b/views/pages/header.ejs
@@ -31,7 +31,7 @@
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">**</span>
         <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="/img/profile.png" width="160px" alt="">
+          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="https://media.licdn.com/dms/image/C4E03AQHoTvysG6EcXQ/profile-displayphoto-shrink_200_200/0?e=1533772800&v=beta&t=OzyBdLZPAij_KcsaUiCYviyxFeDX6Risnefxv9p--9Y" alt="">
         </span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
